--- a/.classpath
+++ b/.classpath
@@ -25,7 +25,13 @@
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/slf4j-api-1.7.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/slf4j-log4j12-1.7.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebRoot/WEB-INF/lib/tomcat-coyote.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jiguang-common-1.0.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jpush-client-3.2.15.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jiguang-common-1.0.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jpush-client-3.2.16.jar"/>
+	<classpathentry kind="lib" path="G:/android/myworkspace/kaoyanjunServer/WebRoot/WEB-INF/lib/jiguang-common-1.0.2.jar"/>
+	<classpathentry kind="lib" path="G:/android/myworkspace/kaoyanjunServer/WebRoot/WEB-INF/lib/jpush-client-3.2.16.jar"/>
+	<classpathentry kind="lib" path="G:/android/myworkspace/kaoyanjunServer/WebRoot/WEB-INF/lib/netty-all-4.1.8.Final.jar"/>
+	<classpathentry kind="lib" path="G:/android/myworkspace/kaoyanjunServer/WebRoot/WEB-INF/lib/netty-all-4.1.8.Final-sources.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/netty-all-4.1.8.Final-sources.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/netty-all-4.1.8.Final.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
